--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+Python/Jupyter Basics:
 python 3.11
 jupyter 1.0.0
 notebook 6.0.3
+
+Machine Learning:
 lxml 5.3.0
 MarkupSafe 3.0.2
 matplotlib 3.10.0
@@ -12,6 +15,8 @@ scikit-learn 1.6.1
 scipy 1.15.1
 seaborn 0.13.2
 SQLAlchemy 2.0.37
+
+Tensorflow:
 keras 3.9.2
 tensorboard 2.19.0
 tensorflow 2.19.0
